# ZDCF

./: 1510-089  1510-089.txt  J1512.8-0906  J1512.8-0906.txt  LICENSE.txt  README.md  pyproject.toml  zdcf.py  zdcf_GH.py
zdcf/: zdcf.py
zdcf/data/: 1510-089  J1512.8-0906
