[tool.poetry]
name = "zdcf"
version = "0.1.0"
description = ""
authors = ["ivkram <im.kramarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
astropy = "^5.2.2"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
